@@ -12,6 +12,7 @@ import edu.iu.terracotta.dao.entity.events.Event;
 import edu.iu.terracotta.dao.model.dto.media.MediaEventDto;
 import edu.iu.terracotta.dao.model.dto.media.MediaLocationDto;
 import edu.iu.terracotta.dao.model.dto.media.MediaObjectDto;
+import edu.iu.terracotta.dao.model.enums.integrations.IntegrationLaunchParameter;
 import edu.iu.terracotta.dao.repository.EventRepository;
 import edu.iu.terracotta.dao.repository.ExposureGroupConditionRepository;
 import edu.iu.terracotta.dao.repository.SubmissionRepository;
@@ -64,7 +65,7 @@ import java.util.UUID;
 
 @Slf4j
 @Service
-@SuppressWarnings({"PMD.GuardLogStatement"})
+@SuppressWarnings({"PMD.GuardLogStatement", "PMD.LooseCoupling"})
 public class CaliperServiceImpl implements CaliperService {
 
     public static final String DATA_VERSION = "http://purl.imsglobal.org/ctx/caliper/v1p2";
@@ -145,7 +146,7 @@ public class CaliperServiceImpl implements CaliperService {
         Person actor = prepareActor(submission.getParticipant(), securedInfo.getLmsUserGlobalId());
         CaliperOrganization group = prepareGroup(submission.getParticipant().getLtiMembershipEntity(), securedInfo);
         org.imsglobal.caliper.entities.resource.Assessment assessment = prepareAssessment(submission, securedInfo);
-        Attempt attempt = prepareAttempt(submission, actor, assessment);
+        Attempt attempt = prepareAttempt(submission, actor, assessment, securedInfo);
         String uuid = "urn:uuid:" + UUID.randomUUID();
 
         Map<String, Object> extenstions = getTerracottaInternalIDs(submission,submission.getParticipant());
@@ -168,7 +169,7 @@ public class CaliperServiceImpl implements CaliperService {
         Envelope envelope = null;
 
         if (sendEnabled(submission.getParticipant().getLtiMembershipEntity().getUser().getPlatformDeployment())) {
-            envelope = new Envelope(getSensor(submission.getParticipant().getLtiMembershipEntity().getUser().getPlatformDeployment()).getId(), DateTime.now(), DATA_VERSION, Collections.singletonList(assessmentEvent));
+            envelope = new Envelope(getSensor(submission.getParticipant().getLtiMembershipEntity().getUser().getPlatformDeployment()).getId(), DateTime.now(), DATA_VERSION, List.of(assessmentEvent));
             send(envelope, submission.getParticipant().getLtiUserEntity().getPlatformDeployment());
         }
 
@@ -207,7 +208,7 @@ public class CaliperServiceImpl implements CaliperService {
         LtiSession ltiSession = prepareLtiSession(securedInfo, submission.getParticipant().getLtiMembershipEntity());
         CaliperOrganization group = prepareGroup(submission.getParticipant().getLtiMembershipEntity(), securedInfo);
         org.imsglobal.caliper.entities.resource.Assessment assessment = prepareAssessment(submission, securedInfo);
-        Attempt attempt = prepareAttempt(submission, actor, assessment);
+        Attempt attempt = prepareAttempt(submission, actor, assessment, securedInfo);
         String uuid = "urn:uuid:" + UUID.randomUUID();
         Map<String, Object> extensions = getTerracottaInternalIDs(submission, submission.getParticipant());
 
@@ -269,7 +270,7 @@ public class CaliperServiceImpl implements CaliperService {
         LtiSession ltiSession = prepareLtiSession(securedInfo, submission.getParticipant().getLtiMembershipEntity());
         CaliperOrganization group = prepareGroup(submission.getParticipant().getLtiMembershipEntity(), securedInfo);
         org.imsglobal.caliper.entities.resource.Assessment assessment = prepareAssessment(submission, securedInfo);
-        Attempt attempt = prepareAttempt(submission, actor, assessment);
+        Attempt attempt = prepareAttempt(submission, actor, assessment, securedInfo);
         String uuid = "urn:uuid:" + UUID.randomUUID();
         Map<String, Object> extensions = getTerracottaInternalIDs(submission, submission.getParticipant());
         assessment.getExtensions().putAll(extensions);
@@ -409,7 +410,7 @@ public class CaliperServiceImpl implements CaliperService {
         LtiSession ltiSession = prepareLtiSession(securedInfo, submission.getParticipant().getLtiMembershipEntity());
         CaliperOrganization group = prepareGroup(submission.getParticipant().getLtiMembershipEntity(), securedInfo);
         org.imsglobal.caliper.entities.resource.Assessment assessment = prepareAssessment(submission, securedInfo);
-        Attempt attempt = prepareAttempt(submission, actor, assessment);
+        Attempt attempt = prepareAttempt(submission, actor, assessment, securedInfo);
         Result result = prepareResult(submission, attempt, assessment);
         String uuid = "urn:uuid:" + UUID.randomUUID();
         Map<String, Object> extenstions = getTerracottaInternalIDs(submission, submission.getParticipant());
@@ -575,6 +576,7 @@ public class CaliperServiceImpl implements CaliperService {
     private org.imsglobal.caliper.entities.resource.Assessment prepareAssessment(Submission submission, SecuredInfo securedInfo) {
         Map<String, Object> extensions = new HashMap<>();
         extensions.put("lms_assessment", submission.getParticipant().getLtiUserEntity().getPlatformDeployment().getBaseUrl() + "/courses/" + securedInfo.getLmsCourseId() + "/assignments/" + securedInfo.getLmsAssignmentId());
+
         int maxAttempts = 0;
 
         try {
@@ -625,12 +627,27 @@ public class CaliperServiceImpl implements CaliperService {
             .build();
     }
 
-    private Attempt prepareAttempt(Submission submission, Person actor, org.imsglobal.caliper.entities.resource.Assessment assessment) {
+    private Attempt prepareAttempt(Submission submission, Person actor, org.imsglobal.caliper.entities.resource.Assessment assessment, SecuredInfo securedInfo) {
+        org.imsglobal.caliper.entities.resource.Assessment attemptAssessment;
+
+        if (submission.isIntegration() && submission.getIntegrationToken() != null) {
+            attemptAssessment = prepareAssessment(submission, securedInfo);
+            // is an integration assignment, add the terracotta_launch_token value
+            if (attemptAssessment.getExtensions() != null) {
+                attemptAssessment.getExtensions().put(
+                    IntegrationLaunchParameter.EVENT_JSON_KEY.key(),
+                    submission.getIntegrationToken().getToken()
+                );
+            }
+        } else {
+            attemptAssessment = assessment;
+        }
+
         return Attempt.builder()
             .id(assessment.getId() + "/submissions/" + submission.getSubmissionId())
             .type(EntityType.ATTEMPT)
             .assignee(actor)
-            .assignable(assessment)
+            .assignable(attemptAssessment)
             .count(submissionRepository.findByParticipant_IdAndAssessment_AssessmentId(submission.getParticipant().getParticipantId(), submission.getAssessment().getAssessmentId()).size())
             .dateCreated(convertTimestamp(submission.getCreatedAt(), false))
             .startedAtTime(convertTimestamp(submission.getCreatedAt(), false))
